--- a/public/css/app.css
+++ b/public/css/app.css
@@ -50,3 +50,32 @@ body {
   margin-bottom: 30px;
 }
 
+.container {
+  margin-left: 15px;
+  margin-right: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+@media screen and (min-width: 900px) {
+  .container {
+    width: 900px;
+  }
+}
+
+.form {
+  padding-top: 20px;
+  width: 300px;
+  display: block;
+  background: rgba(0, 172, 238, 0.5);
+  border-radius: 10px;
+}
+
+.form label {
+  color: black;
+  display: inline-block;
+  width: 100%;
+  clear: both;
+  padding-bottom: 10px;
+}
+
